<resources>
    <string name="app_name">Don\'t Be Silent</string>

    <string name="google_maps_key">AIzaSyCxTIoBlYhhJ6VqBeQlxM9vENjgPU90ZkE</string>

    <string name="bottom_nav_title_campaign">Campaign</string>
    <string name="bottom_nav_title_event">Event</string>
    <string name="bottom_nav_title_my_info">My Info</string>

    <string name="transition_campaign">campaign</string>
    <string name="transition_image">image</string>
    <string name="transition_name">name</string>
    <string name="title_activity_input_campaign">InputCampaignActivity</string>

    <string name="donate">Donate</string>

    <string name="title_activity">Activities</string>
    <string name="title_comment">Comments</string>
    <string name="title_hosted_by">Hosted by:</string>
    <string name="title_followers">Followers</string>
    <string name="title_donation">Donation</string>
    <string name="title_valid_time">Valid time</string>

    <string name="hall_of_fame">Hall of fame</string>

    <string name="btn_see_more">See more</string>

    <string name="user_type_donator">Donator</string>
    <string name="user_type_host">Host</string>
    <string name="user_type_admin">Admin</string>

    <string name="user_info_option">Option</string>
    <string name="user_info_user_detail">User detail</string>
    <string name="user_info_user_campaign">User\'s campaigns</string>
    <string name="user_info_bookmark">Bookmarks</string>

    <string name="num_campaign">%d campaigns</string>
</resources>
