<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--TODO Add android:icon -->
    <item
        android:id="@+id/bottom_nav_main_campaign"
        android:enabled="true"
        android:title="@string/bottom_nav_title_campaign"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_main_event"
        android:enabled="true"
        android:title="@string/bottom_nav_title_event"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_main_info"
        android:enabled="true"
        android:title="@string/bottom_nav_title_my_info"
        android:icon="@drawable/ic_info_white_24dp"
        app:showAsAction="ifRoom" />
</menu>