<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:id="@+id/campaign_info_header"
    android:transitionName="@string/transition_campaign">

    <ImageView
        android:id="@+id/item_campaign_imv_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_image"/>

    <TextView
        android:id="@+id/item_campaign_tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/item_campaign_imv_image"
        android:layout_alignLeft="@id/item_campaign_imv_image"
        android:layout_marginLeft="5dp"
        style="@style/TextViewCampaignItemInfo"
        android:textColor="@android:color/white"
        android:shadowDy="1"
        android:shadowDx="1"
        android:shadowRadius="1"
        android:shadowColor="@android:color/black"
        android:text="Charity"/>

    <ImageView
        android:id="@+id/item_campaign_imv_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/item_campaign_imv_image"
        android:layout_alignRight="@id/item_campaign_imv_image"
        android:layout_marginRight="5dp"
        android:src="@drawable/ic_bookmark_white_36dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/item_campaign_tv_event_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignBottom="@id/item_campaign_imv_image"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:background="#60000000"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:text="Event name goes here"/>

    <TextView
        android:id="@+id/item_campaign_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_campaign_imv_image"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center_vertical"
        style="@style/TextViewName"
        android:text="Campaign name goes here"/>

    <TextView
        android:id="@+id/item_campaign_tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_campaign_tv_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:gravity="left|center_vertical"
        style="@style/TextViewDescription"
        android:text="Young volunteers from VNG company devoted 24 hours to tackle one problem"/>

    <LinearLayout
        android:id="@+id/item_campaign_layout_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_campaign_tv_description"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                style="@style/TextViewCampaignItemInfo"
                android:text="@string/title_hosted_by"/>

            <TextView
                android:id="@+id/item_campaign_tv_operation_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewCampaignItemInfo"
                android:textColor="@color/text_color_blue"
                android:text="Thanh Nien"/>
    </LinearLayout>

    <include layout="@layout/campaign_info"
        android:layout_below="@id/item_campaign_layout_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="12dp"
        />
</RelativeLayout>